--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.0.0",
     "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "package.json": "^2.0.1"
   }
 }
