--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "laravelcollective/html": "^5.2",
-        "cviebrock/eloquent-sluggable": "3.1"
+        "laravel/framework": "5.3.*",
+        "laravelcollective/html": "5.3.*",
+        "cviebrock/eloquent-sluggable": "^4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
